--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,17 +1,46 @@
 <idea-plugin>
-  <id>com.your.company.unique.plugin.id</id>
-  <name>Plugin display name here</name>
+  <id>me.wbean.plugin.dubbo.invoker</id>
+  <name>DubboInvoker</name>
   <version>1.0</version>
-  <vendor email="support@yourcompany.com" url="http://www.yourcompany.com">YourCompany</vendor>
+  <vendor email="wbean1990@gmail.com" url="http://www.wbean.me">wbean</vendor>
 
   <description><![CDATA[
-      Enter short description for your plugin here.<br>
-      <em>most HTML tags may be used</em>
+      a develop tool help test dubbo service.<br/>
+      call dubbo service with several click.<br/>
+      auto generate param value according param type.<br/>
+      support user define param value in doc comment.<br/>
+      <br/><br/>
+
+       usage:
+       step1: right click on dubbo service method <br/>
+       step2: click DubboInvoker <br/>
+       step3: check auto generate param value <br/>
+       step4: click invoke button<br>
+
+       <br>
+       user define param value example:
+       <pre>
+    /**
+     *
+     * @param a id
+     *          example=asdfasdf
+     * @param b 商户号
+     *          example=123
+     * @param exportParam realParam
+     *                    example={"billDate":20190101}
+     */
+    void getData(String a, int b, ExportParam exportParam);
+       </pre>
+
+       <br>
+       1. new line for example
+       2. start with token "example="
+
+
     ]]></description>
 
   <change-notes><![CDATA[
-      Add change notes here.<br>
-      <em>most HTML tags may be used</em>
+      1.0 RELEASE<br>
     ]]>
   </change-notes>
 
@@ -30,6 +59,9 @@
 
   <actions>
     <!-- Add your actions here -->
+      <action id="DubboInvoker.frameOpen" class="me.wbean.plugin.dubbo.invoker.DubboInvokerFrameOpen" text="DubboInvoker" description="DubboInvokerFrameOpen" popup="true">
+          <add-to-group group-id="EditorPopupMenu" anchor="last"/>
+      </action>
   </actions>
 
 </idea-plugin>
